--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,7 @@
 name = "snapchat-data-processing"
 version = "0.1.0"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "ipykernel>=7.1.0",
+    "pillow>=12.0.0",
+]
