--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.14"
 dependencies = [
     "ipykernel>=7.1.0",
+    "piexif>=1.1.3",
     "pillow>=12.0.0",
+    "requests>=2.32.5",
 ]
